# RoboDep

./: .gitattributes  .gitignore  Makefile  README.md  README.org  Taskfile.yml  go.mod  meson.build
src/: main.c  main.cxx  main.go  parsentear.go  rbd.go
src/pt/: parsentear.go
src/templates/: dep.robo.tmpl
